# ironbound-tactics

./: .gitignore  .gitmodules  README.md
code/: CMakeLists.txt  vcpkg.json
code/assets/presets/: EnemyArmies.json  Units.json
code/assets/shaders/: fragmentShader.frag  vertexShader.vert
code/assets/shaders/batch/: fragmentShader.frag  guiAtlas.vert  inanimateBatch.frag  inanimateBatch.vert  vertexShader.vert
code/assets/shaders/shaded/: fragmentShader.frag  vertexShader.vert
code/docs/: Doxygen_Configuration  QuickStart.md
code/docs/wiki/: engine.md  game.md
code/engine/: CMakeLists.txt
code/engine/include/engine/: Context.h  Events.h  Game.h  Log.cpp  Log.h  SoundSystem.h  Texture.h
code/engine/include/engine/ecs/: Component.h  ComponentManager.h  Entity.h  EntityManager.h  Gui.h  System.h  ecs.h
code/engine/include/engine/fsm/: State.h  StateMachine.h
code/engine/include/engine/gui/: Gui.h  GuiManager.cpp  GuiManager.h
code/engine/include/engine/logic/: Action.h  ActionRegistry.cpp  ActionRegistry.h
code/engine/include/engine/rendering/: InstanceBuffer.h  Model2D.h  RenderSystem.h  Shader.h
code/engine/include/engine/sceneGraph/: SceneGraphPruner.h  SceneGraphUpdater.h  Transform.h
code/engine/include/engine/util/: Assets.h  Debug.h  VertPresets.h
code/engine/src/: Context.cpp  Game.cpp  SoundSystem.cpp  Texture.cpp
code/engine/src/ecs/: ComponentManager.cpp  EntityManager.cpp
code/engine/src/fsm/: StateMachine.cpp
code/engine/src/gui/: GuiManager.cpp
code/engine/src/logic/: ActionRegistry.cpp
code/engine/src/rendering/: RenderSystem.cpp
code/engine/src/sceneGraph/: Transform.cpp
code/game/: CMakeLists.txt
code/game/src/: Assets.h  Debug.h  Game.cpp  Game.h  main.cpp
code/game/src/combatLogic/: Army.cpp  Army.h
code/game/src/components/: CombatSelection.cpp  CombatSelection.h  GuiState.h  HexTile.h  Icon.h  InstanceBuffer.h  Model2D.h  Shader.h  TagComponent.h  UnitContainer.h  UnitState.h
code/game/src/components/unitTypes/: Archer.h  Catapult.h  Infantry.h  SiegeEngine.h  Unit.cpp  Unit.h  UnitCategory.h
code/game/src/entities/: Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Missile.cpp  Missile.h  Planet.cpp  Planet.h  Ship.cpp  Ship.h  Unit.cpp  Unit.h  UnitSiege.cpp  UnitSiege.h
code/game/src/entities/objectTypes/: Catapult.cpp  Catapult.h
code/game/src/entities/unitTypes/: Archer.cpp  Archer.h  Infantry.cpp  Infantry.h  UnitHumanoid.cpp  UnitHumanoid.h  UnitSiege.cpp  UnitSiege.h
code/game/src/gui/: CombatController.cpp  CombatController.h  GuiCombat.cpp  GuiCombat.h  GuiContainer.cpp  GuiContainer.h  GuiMainMenu.cpp  GuiMainMenu.h  GuiUnitSelection.cpp  GuiUnitSelection.h
code/game/src/guiElements/: BattleMenu.cpp  BattleMenu.h  GuiElement.cpp  GuiElement.h  battleMenu.cpp  battleMenu.h  guiElement.cpp  guiElement.h
code/game/src/logic/: ActionEvaluation.cpp  ActionEvaluation.h  CombatFunctions.cpp  CombatFunctions.h  EnemyAI.cpp  EnemyAI.h  LibCombatFunctions.cpp  LibCombatFunctions.h  UnitPresets.h
code/game/src/rendering/: GUI.cpp  GUI.h  Mesh.cpp  Mesh.h  PngTexture.cpp  PngTexture.h  Shader.cpp  Shader.h
code/game/src/systems/: CombatController.cpp  CombatController.h  GuiHandler.cpp  GuiHandler.h  HoverIconSystem.cpp  HoverIconSystem.h  MovementSystem.cpp  MovementSystem.h  SelectionSystem.h
code/game/src/systems/rendering/: InstanceManager.cpp  InstanceManager.h  RenderSystem.cpp  RenderSystem.h
docs/: Doxygen_Configuration  _action_8h_source.html  _action_registry_8h_source.html  _assets_8h_source.html  _component_8h_source.html  _component_manager_8h_source.html  _context_8h_source.html  _debug_8h_source.html  _entity_8h_source.html  _entity_manager_8h_source.html  _events_8h_source.html  _game_8h_source.html  _gui_8h_source.html  _instance_buffer_8h_source.html  _model2_d_8h_source.html  _render_system_8h_source.html  _scene_graph_pruner_8h_source.html  _scene_graph_updater_8h_source.html  _shader_8h_source.html  _system_8h_source.html  _texture_8h_source.html  _transform_8h_source.html  _vert_presets_8h_source.html  annotated.html  annotated_dup.js  class_component-members.html  class_component.html  class_component.js  class_component_manager-members.html  class_component_manager.html  class_entity-members.html  class_entity.html  class_game-members.html  class_game.html  class_game.js  class_system-members.html  class_system.html  class_system.js  class_transform-members.html  class_transform.html  (+80 more)
docs/output/: QuickStart.md
docs/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_7.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_7.js  functions_8.js  functions_b.js  functions_c.js  groups_1.js  groups_2.js  groups_4.js  groups_5.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  pages_6.js  pages_7.js  pages_8.js  pages_9.js  (+6 more)
docs/wiki/: game.md
documentation/: _action_registry_8h_source.html  _component_8h_source.html  _component_manager_8h_source.html  _context_8h_source.html  _debug_8h_source.html  _entity_8h_source.html  _entity_manager_8h_source.html  _events_8h_source.html  _game_8h_source.html  _gui_8h_source.html  _instance_buffer_8h_source.html  _log_8h_source.html  _model2_d_8h_source.html  _render_system_8h_source.html  _scene_graph_pruner_8h_source.html  _scene_graph_updater_8h_source.html  _shader_8h_source.html  _sound_system_8h_source.html  _system_8h_source.html  _texture_8h_source.html  _transform_8h_source.html  _vert_presets_8h_source.html  annotated.html  annotated_dup.js  class_component.html  class_component_manager.html  class_component_manager.js  class_entity-members.html  class_entity.html  class_entity.js  class_game-members.html  class_game.html  class_game.js  class_system-members.html  class_system.html  class_system.js  class_transform.html  class_transform.js  classes.html  classgl3_1_1engine_1_1_game-members.html  (+91 more)
poster/: gl-poster-template-adobePS.xcf
(+186 files in other folders)
